objects/Standard_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Deal_Product_Name__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Deal_Product_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Deal Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Deal_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pricing Deal Product</label>
        <referenceTo>Pricing_Deal_Product__c</referenceTo>
        <relationshipLabel>Standard Pricings</relationshipLabel>
        <relationshipName>Standard_Pricings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Group__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Template__c</fullName>
        <label>Pricing Template</label>
        <referenceTo>Pricing_Template__c</referenceTo>
        <relationshipLabel>Standard Pricings</relationshipLabel>
        <relationshipName>Standard_Pricings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Pricing_Deal_Product__r.Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT(Pricing_Deal_Product__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Inclusive__c</fullName>
        <formula>Pricing_Deal_Product__r.Pricing_Group__r.VAT_Inclusive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <label>Standard Pricing</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Standard Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Pricings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>